style: 컨벤션 수정